tournament page added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,36 +59,35 @@
     </div>
 
     <div id="tournaments" class="our_tournaments">
-        <h1>OUR TOURNAMNETS</h1>
+    <h1>OUR TOURNAMENTS</h1>
 
-        <div class="tournament_cards">
-            <div class="card" style="background-image: url('media/ignition.jpg')">
-                <div class="overlay">
-                    <h3>IGNITION</h3>
-                    <p>NOV 2023</p>
-                </div>
+    <div class="tournament_cards">
+        <div class="card" style="background-image: url('media/ignition.jpg')" onclick="window.location.href='/tournaments?tournament=ignition'">
+            <div class="overlay">
+                <h3>IGNITION</h3>
+                <p>NOV 2023</p>
             </div>
-            <div class="card" style="background-image: url('media/formation.jpg')">
-                <div class="overlay">
-                    <h3>FORMATION</h3>
-                    <p>FEB 2024</p>
-                </div>
+        </div>
+        <div class="card" style="background-image: url('media/formation.jpg')" onclick="window.location.href='/tournaments?tournament=formation'">
+            <div class="overlay">
+                <h3>FORMATION</h3>
+                <p>FEB 2024</p>
             </div>
-            <div class="card" style="background-image: url('media/summit_league.jpg')">
-                <div class="overlay">
-                    <h3>SUMMIT LEAGUE</h3>
-                    <p>FEB 2024</p>
-                </div>
+        </div>
+        <div class="card" style="background-image: url('media/summit_league.jpg')" onclick="window.location.href='/tournaments?tournament=summit_league'">
+            <div class="overlay">
+                <h3>SUMMIT LEAGUE</h3>
+                <p>FEB 2024</p>
             </div>
-            <div class="card" style="background-image: url('media/insta-post.png')">
-                <div class="overlay">
-                    <h3>SUMMIT LEAGUE 2.0</h3>
-                    <p>FEB 2025</p>
-                </div>
+        </div>
+        <div class="card" style="background-image: url('media/insta-post.png')" onclick="window.location.href='/tournaments?tournament=summit_league_2'">
+            <div class="overlay">
+                <h3>SUMMIT LEAGUE 2.0</h3>
+                <p>FEB 2025</p>
             </div>
-
         </div>
     </div>
+</div>
 
     <section id="contact" class="contact-section">
         <div class="contact-container">
