--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -28,8 +28,8 @@
                 <a href="/" class="nav-link">our network</a>
             </div>
             <div class="navbar-right">
-                <a href="/tournaments" class="nav-link">tournaments</a>
-                <a href="/contact" class="nav-link">contact us</a>
+                <a href="/#tournaments" class="nav-link">tournaments</a>
+                <a href="/#contact" class="nav-link">contact us</a>
             </div>
         </nav>
 
